<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>

    <string name="btn_search_pressed" translatable="false">Нажата кнопка Поиск</string>
    <string name="btn_library_pressed" translatable="false">Нажата кнопка Медиатека</string>
    <string name="btn_settings_pressed" translatable="false">Нажата кнопка Настройки</string>
    <string name="btn_back" translatable="false">btn_back</string>

    <string name="link_to_course" translatable="false">https://practicum.yandex.com/profile/android-developer-plus/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="user_email" translatable="false">dimamilkk@yandex.by</string>
    <string name="thank_to_dev_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="thank_to_dev_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="app_to_share" translatable="false">Выбери приложение для отправки</string>
    <string name="clear_edit_text" translatable="false">x</string>
    <string name="empty_track_list_text" translatable="false">Ничего не нашлось</string>
    <string name="bad_connection_error_text" translatable="false">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>

    <string name="search_update_button" translatable="false">Обновить</string>
    <string name="your_search" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="track_duration" translatable="false">Длительность</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="year" translatable="false">Год</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="country" translatable="false">Страна</string>

    <string name="start_track_time" translatable="false">00:00</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <string name="favourite_songs" translatable="false">Избранные треки</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="your_library_is_empty" translatable="false">Ваша медиатека пуста</string>
    <string name="you_dont_create_any_playlists" translatable="false">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="playlist_name" translatable="false">Название*</string>
    <string name="description" translatable="false">Описание</string>
    <string name="create" translatable="false">Создать</string>

    <string name="save" translatable="false">Сохранить</string>
    <string name="edit_playlist" translatable="false">Редактировать информацию</string>

    <string name="dialog_title" translatable="false">Завершить создание плейлиста?</string>
    <string name="dialog_update_playlist_title" translatable="false">Завершить редактирование плейлиста?</string>
    <string name="dialog_delete_song_from_playlist_title" translatable="false">Хотите удалить трек?</string>
    <string name="dialog_delete_playlist_title" translatable="false">Хотите удалить плейлист «%1$s»?</string>
    <string name="dialog_cancel" translatable="false">Отмена</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="dialog_ok" translatable="false">Завершить</string>
    <string name="dialog_message" translatable="false">Все несохраненные данные будут потеряны</string>

    <string name="toast_playlist_created" translatable="false">Плейлист %1$s создан</string>
    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>

    <string name="song_is_already_in_playlist" translatable="false">Трек уже добавлен в плейлист %1$s</string>
    <string name="song_added_to_playlist" translatable="false">Добавлено в плейлист %1$s</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="edit_information" translatable="false">Редактировать информацию</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>
    <string name="playlist_sharing_song_format" translatable="false">%1$s. %2$s - %3$s (%4$s)</string>
    <string name="no_songs_in_playlist" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="network_error_toast" translatable="false">Нет соединения с интернетом</string>
</resources>