<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_screen_bg"
    tools:context=".ui.library.playlist.NewPlaylistFragment"
    >

    <TextView
        android:id="@+id/btnBack"
        style="@style/PreviousScreenTextview"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/btnAddPlaylistImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_load_playlist_image"
        android:scaleType="center"
        android:src="@drawable/btn_add_photo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/TextInputPlayer"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/btnAddPlaylistImg"
        app:layout_constraintStart_toStartOf="@id/btnAddPlaylistImg"
        app:layout_constraintTop_toBottomOf="@id/btnAddPlaylistImg"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/EditTextNewPlaylist"
            android:hint="@string/playlist_name"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/TextInputPlayer"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            style="@style/EditTextNewPlaylist"
            android:hint="@string/description"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_btn_create"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnAddPlaylistImg"
        app:layout_constraintStart_toStartOf="@id/btnAddPlaylistImg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>