<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/settings_screen_bg"
    tools:context="com.example.playlistmaker.ui.search.SearchFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_back_search"
            style="@style/PreviousScreenTextview"
            android:text="@string/search"
            app:drawableStartCompat="@null" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_edit_text_bg">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/search_edit_text_icon"
                android:drawablePadding="8dp"
                android:drawableTint="@color/search_edit_text_icon_color"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingVertical="9dp"
                android:paddingStart="12dp"
                android:paddingEnd="48dp"
                android:singleLine="true"
                android:textColor="@color/main_dark"
                android:textColorHint="@color/search_edit_text_icon_color"
                android:textFontWeight="400"
                android:textSize="16sp"
                android:textStyle="normal"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/btn_clear_edit_text"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/btn_clear_edit_text"
                android:backgroundTint="@color/search_edit_text_icon_color"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/your_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:paddingVertical="12dp"
            android:text="@string/your_search"
            android:textColor="@color/previous_screen_text_color"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar_search"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="140dp"
                android:indeterminateTint="@color/progress_bar_color"
                android:visibility="gone" />

            <LinearLayout

                android:id="@+id/error_loading_tracks_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="102dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/error_loading_tracks_image"
                    style="@style/emptySongListError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/error_loading_tracks_text"
                    style="@style/SearchErrorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_track_list_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_bad_connection_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="102dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/error_bad_connection_image"
                    style="@style/trackListLoadingError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/error_bad_connection_text"
                    style="@style/SearchErrorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/bad_connection_error_text" />

                <Button
                    android:id="@+id/retry_search"
                    style="@style/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/track_rcView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/clear_search_history_btn"
                    style="@style/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="24dp"
                    android:backgroundTint="@color/previous_screen_text_color"
                    android:text="@string/clear_history"
                    android:textAllCaps="false" />
            </LinearLayout>

        </FrameLayout>


    </LinearLayout>

</LinearLayout>